--- a/Titanic-Survival-Prediction/Titanic.ipynb
+++ b/Titanic-Survival-Prediction/Titanic.ipynb
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "# First look at the overall survival ratio\n",
+    "# Checking the overall survival ratio\n",
     "fig = plt.figure(figsize=(6,6))\n",
     "train_data['Survived'].value_counts().plot.pie(autopct = '%1.2f%%')"
    ]
