--- a/Movie Rating Prediction/MovieRatingPrediction.ipynb
+++ b/Movie Rating Prediction/MovieRatingPrediction.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ***Importing the libraries***\n",
+        "# **Importing the libraries**\n",
         "\n",
         "\n"
       ],
